# gtuxnes

./: AUTHORS  AUTHORS.md  CHANGES  CHANGES.md  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS.md  README  README.md  TODO  configure.ac  debug.h  files.c  general.c  general.h  gtuxnes.h  input.h  panels.c  sound.c  sound.h  video.c  video.h
src/: Makefile.am  config.c  config.h  debug.c  debug.h  files.c  files.h  general.c  general.h  gtuxnes.c  gtuxnes.h  input.c  input.h  palette.c  panels.c  panels.h  settings.c  settings.h  sound.c  sound.h  video.c  video.h
