# SPDX-FileCopyrightText: 2014-2024 Kyle Guinn <elyk03@gmail.com>
# SPDX-License-Identifier: GPL-2.0-or-later

AM_CPPFLAGS = $(GTK_CFLAGS)

bin_PROGRAMS = gtuxnes

gtuxnes_SOURCES = \
	gtuxnes.c gtuxnes.h \
	settings.c settings.h \
	panels.c panels.h \
	general.c \
	sound.c \
	video.c \
	palette.c \
	input.c \
	debug.c
gtuxnes_LDADD = $(GTK_LIBS)
